--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -1,16 +1,45 @@
-.button {
-  display: block;
-  max-width: 240px;
-  background-color: #00875A;
-  color: #fff;
-  font-size: 14px;
-  font-weight: bold;
-  text-decoration: none;
-  padding: 12px 24px;
-  border-radius: 4px;
-  border: none;
-  box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.1), 0px 1.5px 3.5px rgba(0, 0, 0, 0.13);
-  transition: all .2s;
-  text-align: center;
-  cursor: pointer;
+.introduction {
+  padding: 0 16px;
+
+  &__headline {
+    text-align: center;
+    margin: 24px auto 16px;
+    font-size: 2.5rem;
+    color: $blue-800;
+  }
+
+  &__version-info {
+    text-align: center;
+  }
+}
+
+.article {
+  max-width: 960px;
+  margin: 24px auto;
+
+  &__headline {
+    color: $blue-800;
+    font-size: 2rem;
+    margin: 1rem 0;
+  }
+
+  &__image-container {
+    margin: 2rem auto;
+  }
+
+  &__image {
+    width: 100%;
+    max-height: 480px;
+    object-fit: cover;
+  }
+
+  &__list-item {
+    font-size: 1rem;
+    margin: 1rem 0;
+  }
+}
+
+.special-message {
+  color: $gray-600;
+  margin: 8px 0;
 }
