--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -2,9 +2,8 @@
   padding: 0 16px;
 
   &__headline {
+    @include headline-large;
     text-align: center;
-    margin: 24px auto 16px;
-    font-size: 2.5rem;
     color: $blue-800;
   }
 
@@ -18,8 +17,8 @@
   margin: 24px auto;
 
   &__headline {
+    @include headline-normal;
     color: $blue-800;
-    font-size: 2rem;
     margin: 1rem 0;
   }
 
@@ -31,15 +30,15 @@
     width: 100%;
     max-height: 480px;
     object-fit: cover;
+    border: 1px solid $gray-600;
   }
 
   &__list-item {
-    font-size: 1rem;
-    margin: 1rem 0;
+    @include body-normal;
   }
 }
 
 .special-message {
-  color: $gray-600;
+  color: $green-600;
   margin: 8px 0;
 }
