--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -10,6 +10,7 @@ $gray-50: #F9FAFB;
 $blue-500: #2F88FF;
 $blue-600: #2563EB;
 $blue-800: #1E40AF;
+$green-600: #059669;
 
 /* Font/text values */
 $primary-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
