add React support

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,12 +1,15 @@
-/* Colors: */
+/* Colors */
 $white: #FFFFFF;
 $black: #000000;
+
 $red-600: #DC2626;
-$gray-300: #D1D5DB;
-$gray-900: #050038;
-$gray-600: #4B5563;
-$gray-400: #9B99AF;
+
 $gray-50: #F9FAFB;
+$gray-300: #D1D5DB;
+$gray-400: #9B99AF;
+$gray-600: #4B5563;
+$gray-900: #050038;
+
 $blue-500: #2F88FF;
 $blue-600: #2563EB;
 $blue-800: #1E40AF;
