--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,13 +1,4 @@
-// Top-level SCSS files are compiled into separated CSS files.
 @import "./variables";
+@import "./settings";
 @import "./components";
 @import "./pages";
-
-
-html, body {
-  font-family: $primary-font-family;
-  font-size: 16px;
-  color: $black;
-  margin: 0;
-  padding: 0;
-}
