--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -13,6 +13,31 @@
   }
 }
 
+.Hello {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 960px;
+  margin: 24px auto;
+  position: relative;
+
+  &__headline {
+    position: absolute;
+    top: 35%;
+    left: 15%;
+    font-size: 40px;
+    color: $gray-50;
+    white-space: pre-line;
+    text-shadow: 2px 3px 3px rgba(51 51 51 / 16%);
+  }
+
+  &__image {
+    width: 100%;
+    height: 480px;
+    object-fit: cover;
+  }
+}
+
 .article {
   max-width: 960px;
   margin: 24px auto;
