--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,6 +9,7 @@ $gray-300: #D1D5DB;
 $gray-400: #9B99AF;
 $gray-600: #4B5563;
 $gray-900: #050038;
+$cool-gray900: #111827;
 
 $blue-500: #2F88FF;
 $blue-600: #2563EB;
