--- a/src/scss/_pages.scss
+++ b/src/scss/_pages.scss
@@ -1,7 +1,9 @@
-// Demo Page
+@use "./variables";
+
+/* Demo Page */
 .Presentation {
-  color: $gray-50;
-  background: $cool-gray900;
+  color: variables.$gray-50;
+  background: variables.$cool-gray900;
   height: 100vh;
   width: 100vw;
   padding: 0 64px;
@@ -16,18 +18,32 @@
     padding: 0 0 120px;
   }
 
-  &__headline-text-small {
-    font-size: 32px;
-    line-height: 38px;
+  &__headline-text {
     font-weight: 800;
-    margin: 0 0 4px;
-  }
+    position: relative;
 
-  &__headline-text-normal {
-    font-size: 80px;
-    line-height: 95px;
-    font-weight: 800;
-    margin: 0;
+    &:after {
+      content: '';
+      background: variables.$cool-gray900;
+      position: absolute;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 1;
+      transform-origin: 0 100%;
+    }
+
+    &--small {
+      font-size: 32px;
+      line-height: 38px;
+      margin: 0 0 4px;
+    }
+
+    &--normal {
+      font-size: 80px;
+      line-height: 95px;
+      margin: 0;
+    }
   }
 
   &__version-info {
@@ -36,6 +52,18 @@
     font-size: 20px;
     line-height: 24px;
     margin: 16px 0 0;
+    position: relative;
+
+    &:after {
+      content: '';
+      background: variables.$cool-gray900;
+      position: absolute;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 1;
+      transform-origin: 100% 0;
+    }
   }
 
   &__section-line {
@@ -49,5 +77,17 @@
   &__special-message {
     margin: 8px 0;
     font-size: 16px;
+    position: relative;
+
+    &:after {
+      content: '';
+      background: variables.$cool-gray900;
+      position: absolute;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 1;
+      transform-origin: 100% 0;
+    }
   }
 }
