Remove unused components

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -2,15 +2,25 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <meta name="description" content="site description" />
     <title>Home | Static Site Generator</title>
-    <link rel="shortcut icon" href="./assets/favicon/favicon.ico" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="./assets/favicon/favicon.ico"
+      type="image/x-icon"
+    />
     <link rel="icon" href="./assets/favicon/favicon.ico" type="image/x-icon" />
     <!-- Web Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap"
+      rel="stylesheet"
+    />
     <!-- Main CSS File -->
     <link rel="stylesheet" href="./css/main.css" />
   </head>
@@ -19,16 +29,16 @@
     <div class="p-home">
       <section class="l-section">
         <div class="l-section__content">
-          <h2>Layouts</h2>
-          <hr>
+          <%- include('./components/_c-section-title', {title: 'Layouts'}) %>
+          <hr />
           <!-- l-flex-two-colums -->
           <h3>Two columns</h3>
           <div class="l-flex-two-colums">
             <div class="l-flex-two-colums__item">
-              <p>ITEM</p> 
+              <p>ITEM</p>
             </div>
             <div class="l-flex-two-colums__item">
-              <p>ITEM</p> 
+              <p>ITEM</p>
             </div>
           </div>
           <!-- l-flex-three-colums -->
@@ -48,8 +58,8 @@
       </section>
       <section class="l-section">
         <div class="l-section__content">
-          <h2>Components</h2>
-          <hr>
+          <%- include('./components/_c-section-title', {title: 'Components'}) %>
+          <hr />
           <!-- Buttons -->
           <a class="c-button-primary" href="./#">Text Label</a>
         </div>
